--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 		<h2> Guess </h2>
 		<h2> the colour</h2>
 		<h1> RGB(21,21,21)</h1>
+		<h1> </h1>
 		
 	</header>
 	<div id='menu'>
-		<p><button type="button" id="newgame">New Colours </button>
+		<p><button type="button" id="newgame">New Game </button>
 			<span id="score">Which one ? </span>
 			<span id="gamemode"> Game Mode 
 			<button type="button" id="modeeasy">EASY </button>
